Fix overlapping first notes over chord issue

--- a/src/components/Pages/ChangeLog.css
+++ b/src/components/Pages/ChangeLog.css
@@ -13,3 +13,6 @@
   padding-left: 20px;
   margin-top: 10px;
 }
+.changelogs > li ul ul {
+  margin-top: 0;
+}
